--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@terra-money/feather.js": "^1.0.8",
     "@terra-money/wallet-kit": "^1.0.3",
+    "@terra-money/wallet-provider": "^4.0.0",
     "caniuse-lite": "^1.0.30001516",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
