--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "axios": "^0.27.2",
+    "bignumber.js": "^9.0.2",
+    "buffer": "^6.0.3",
+    "classnames": "^2.3.1",
+    "recoil": "^0.7.2",
+    "sass": "^1.52.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.15.0",
