--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "@terra-money/feather.js": "^1.0.8",
     "@terra-money/wallet-kit": "^1.0.3",
     "@terra-money/wallet-provider": "^4.0.0",
+    "axios": "^0.27.2",
+    "bignumber.js": "^9.0.2",
+    "buffer": "^6.0.3",
+    "classnames": "^2.3.1",
     "caniuse-lite": "^1.0.30001516",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
+    "recoil": "^0.7.2",
+    "sass": "^1.52.1",
     "web-vitals": "^1.1.2"
   },
   "devDependencies": {
