--- a/package.json
+++ b/package.json
@@ -5,16 +5,26 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.8.0",
+    "@mui/material": "^5.9.1",
     "@terra-money/feather.js": "^1.0.8",
+    "@terra-money/terra.js": "^3.1.10",
     "@terra-money/wallet-kit": "^1.0.3",
     "@terra-money/wallet-provider": "^4.0.0",
+    "@terra.kitchen/utils": "^1.0.7",
     "axios": "^0.27.2",
     "bignumber.js": "^9.0.2",
     "buffer": "^6.0.3",
-    "classnames": "^2.3.1",
     "caniuse-lite": "^1.0.30001516",
+    "classnames": "^2.3.1",
+    "i18next": "^21.8.14",
+    "i18next-browser-languagedetector": "^6.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.18.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "^4.0.3",
     "recoil": "^0.7.2",
     "sass": "^1.52.1",
@@ -27,6 +37,7 @@
     "@types/jest": "^27.0.2",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
+    "@types/react-router-dom": "^5.3.3",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
