--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
     "buffer": "^6.0.3",
     "caniuse-lite": "^1.0.30001516",
     "classnames": "^2.3.1",
+    "crypto-js": "^4.1.1",
     "date-fns": "^2.30.0",
     "i18next": "^21.8.14",
     "i18next-browser-languagedetector": "^6.1.4",
+    "immutability-helper": "^3.1.1",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.18.1",
     "react-modal": "^3.16.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^4.0.3",
     "recoil": "^0.7.2",
@@ -38,6 +41,7 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/crypto-js": "^4.1.1",
     "@types/jest": "^27.0.2",
     "@types/react": "^17.0.34",
     "@types/react-copy-to-clipboard": "^5.0.4",
