--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@anchor-protocol/anchor.js": "^5.1.1",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -25,6 +26,8 @@
     "i18next": "^21.8.14",
     "i18next-browser-languagedetector": "^6.1.4",
     "immutability-helper": "^3.1.1",
+    "js-base64": "^3.7.5",
+    "keccak256": "^1.0.6",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^17.0.2",
@@ -35,6 +38,7 @@
     "react-scripts": "^4.0.3",
     "recoil": "^0.7.2",
     "sass": "^1.52.1",
+    "sentence-case": "^3.0.4",
     "web-vitals": "^1.1.2"
   },
   "devDependencies": {
