--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@terra-money/log-finder-ruleset": "^3.0.0",
     "@terra-money/terra.js": "^3.1.7",
     "@terra-money/terra.proto": "^2.0.0",
+    "@terra-money/wallet-kit": "^1.0.4",
     "@terra-money/wallet-provider": "^3.11.0",
     "@terra.kitchen/utils": "^1.0.7",
     "@tippyjs/react": "^4.2.6",
