--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.9.1",
     "@terra-money/ledger-terra-js": "^1.3.0",
     "@terra-money/log-finder-ruleset": "^3.0.0",
+    "@terra-money/msg-reader": "^3.0.1",
     "@terra-money/terra.js": "^3.1.7",
     "@terra-money/terra.proto": "^2.0.0",
     "@terra-money/wallet-kit": "^1.0.4",
@@ -31,6 +32,7 @@
     "classnames": "^2.3.1",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.28.0",
+    "extensionizer": "^1.0.1",
     "i18next": "^21.8.14",
     "i18next-browser-languagedetector": "^6.1.4",
     "immutability-helper": "^3.1.1",
